exercise2/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: quicklabs2
  labels:
    name: quicklabs2
