exercise2/secure-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: secure-pod
  name: secure-pod
  namespace: quicklabs2
spec:
  containers:
  - image: nginx
    imagePullPolicy: IfNotPresent
    name: secure-pod
    ports:
      - containerPort: 80
        name: http-port
