exercise2/secure-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: secure-pod
  name: secure-service
  namespace: quicklabs2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http-port
  selector:
    run: secure-pod
  type: ClusterIP
